US195559 - Atlas Enter FSW via todo on overview page - added do later button and modifie the active tab color and fixed aligning of buttons in fsw. @rev 246393

--- a/app/modules/core/setupWizard/_setup-wizard.scss
+++ b/app/modules/core/setupWizard/_setup-wizard.scss
@@ -7,8 +7,10 @@
     @extend .row;
     display: flex;
     .col-sm-4 {
-      margin-right: 3px;
       padding-bottom: 10px;
+      &:not(:last-of-type){
+        margin-right: 3px;
+      }
     }
     .col-free {
       background: $gray-lightest;
